[package]
name = "td_ab"
version = "0.1.0"
authors = ["JackThomson2 <jackathomson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.3.2"
snmalloc-rs = { version = "0.2", features=["native-cpu", "cache-friendly"] }

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"